@@ -35,6 +35,8 @@ import hudson.model.Descriptor;
 import hudson.model.Item;
 import hudson.model.TaskListener;
 import hudson.util.FormValidation;
+import hudson.util.VersionNumber;
+import io.jenkins.lib.versionnumber.JavaSpecificationVersion;
 
 import java.beans.Introspector;
 import java.io.Serializable;
@@ -58,6 +60,7 @@ import java.util.logging.Logger;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import jenkins.model.Jenkins;
+import org.apache.commons.lang.StringUtils;
 import org.codehaus.groovy.control.CompilationUnit;
 import org.codehaus.groovy.control.CompilerConfiguration;
 import org.codehaus.groovy.control.SourceUnit;
@@ -68,7 +71,10 @@ import org.jenkinsci.plugins.scriptsecurity.scripts.ScriptApproval;
 import org.jenkinsci.plugins.scriptsecurity.scripts.UnapprovedClasspathException;
 import org.jenkinsci.plugins.scriptsecurity.scripts.UnapprovedUsageException;
 import org.jenkinsci.plugins.scriptsecurity.scripts.languages.GroovyLanguage;
+import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.DataBoundConstructor;
+import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.Stapler;
 import org.kohsuke.stapler.StaplerRequest;
@@ -86,6 +92,7 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
     private final @NonNull String script;
     private final boolean sandbox;
     private final @CheckForNull List<ClasspathEntry> classpath;
+    private transient String oldScript;
     private transient boolean calledConfiguring;
 
     static final Logger LOGGER = Logger.getLogger(SecureGroovyScript.class.getName());
@@ -114,7 +121,21 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
     }
 
     public @NonNull List<ClasspathEntry> getClasspath() {
-        return classpath != null ? classpath : Collections.<ClasspathEntry>emptyList();
+        return classpath != null ? classpath : Collections.emptyList();
+    }
+
+    public String getOldScript() {
+        return oldScript;
+    }
+
+    @DataBoundSetter
+    public void setOldScript(String oldScript) {
+        this.oldScript = oldScript;
+    }
+
+    @Restricted(NoExternalUse.class)
+    public boolean isScriptAutoApprovalEnabled() {
+        return ScriptApproval.ADMIN_AUTO_APPROVAL_ENABLED;
     }
 
     /**
@@ -125,7 +146,7 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
     public SecureGroovyScript configuring(ApprovalContext context) {
         calledConfiguring = true;
         if (!sandbox) {
-            ScriptApproval.get().configuring(script, GroovyLanguage.get(), context);
+            ScriptApproval.get().configuring(script, GroovyLanguage.get(), context, !StringUtils.equals(this.oldScript, this.script));
         }
         for (ClasspathEntry entry : getClasspath()) {
             ScriptApproval.get().configuring(entry, context);
@@ -187,6 +208,7 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
         if (encounteredClasses.add(clazz)) {
             LOGGER.log(Level.FINER, "found {0}", clazz.getName());
             Introspector.flushFromCaches(clazz);
+            cleanUpClassInfoCache(clazz);
             cleanUpGlobalClassSet(clazz);
             cleanUpClassHelperCache(clazz);
             cleanUpObjectStreamClassCaches(clazz);
@@ -247,6 +269,46 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
         }
     }
 
+    private static void cleanUpClassInfoCache(Class<?> clazz) {
+        int releaseVersion = JavaSpecificationVersion.forCurrentJVM().toReleaseVersion();
+        if ((releaseVersion > 8 && releaseVersion < 11)
+                || (releaseVersion == 11 && new VersionNumber(System.getProperty("java.version")).isOlderThan(new VersionNumber("11.0.17")))
+                || (releaseVersion > 11 && releaseVersion < 16)) {
+            try {
+                // TODO Work around JDK-8231454.
+                Class<?> classInfoC = Class.forName("com.sun.beans.introspect.ClassInfo");
+                Field cacheF = classInfoC.getDeclaredField("CACHE");
+                try {
+                    cacheF.setAccessible(true);
+                } catch (RuntimeException e) { // TODO Java 9+ InaccessibleObjectException
+                    /*
+                     * Not running with "--add-opens java.desktop/com.sun.beans.introspect=ALL-UNNAMED".
+                     * Until core adds this to its --add-opens configuration, and until that core
+                     * change is widely adopted, avoid unnecessary log spam and return early.
+                     */
+                    if (LOGGER.isLoggable(Level.FINER)) {
+                        LOGGER.log(Level.FINER, "Failed to clean up " + clazz.getName() + " from ClassInfo#CACHE. A metaspace leak may have occurred.", e);
+                    }
+                    return;
+                }
+                Object cache = cacheF.get(null);
+                Class<?> cacheC = Class.forName("com.sun.beans.util.Cache");
+                if (LOGGER.isLoggable(Level.FINER)) {
+                    LOGGER.log(Level.FINER, "Cleaning up " + clazz.getName() + " from ClassInfo#CACHE.");
+                }
+                Method removeM = cacheC.getMethod("remove", Object.class);
+                removeM.invoke(cache, clazz);
+            } catch (ReflectiveOperationException e) {
+                /*
+                 * Should never happen, but if it does, ensure the failure is isolated to this
+                 * method and does not prevent other cleanup logic from executing.
+                 */
+                LOGGER.log(Level.WARNING, "Failed to clean up " + clazz.getName() + " from ClassInfo#CACHE. A metaspace leak may have occurred.", e);
+            }
+        }
+    }
+
+
     private static void cleanUpGlobalClassSet(@NonNull Class<?> clazz) throws Exception {
         Class<?> classInfoC = Class.forName("org.codehaus.groovy.reflection.ClassInfo"); // or just ClassInfo.class, but unclear whether this will always be there
         Field globalClassSetF = classInfoC.getDeclaredField("globalClassSet");
@@ -294,15 +356,18 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
         for (String cacheFName : new String[] {"localDescs", "reflectors"}) {
             Field cacheF = cachesC.getDeclaredField(cacheFName);
             cacheF.setAccessible(true);
-            ConcurrentMap<Reference<Class<?>>, ?> cache = (ConcurrentMap) cacheF.get(null);
-            Iterator<? extends Map.Entry<Reference<Class<?>>, ?>> iterator = cache.entrySet().iterator();
-            while (iterator.hasNext()) {
-                if (iterator.next().getKey().get() == clazz) {
-                    iterator.remove();
-                    if (LOGGER.isLoggable(Level.FINER)) {
-                      LOGGER.log(Level.FINER, "cleaning up {0} from ObjectStreamClass.Caches.{1}", new Object[] {clazz.getName(), cacheFName});
+            Object cache = cacheF.get(null);
+            if (cache instanceof ConcurrentMap) {
+                // Prior to JDK-8277072
+                Iterator<? extends Map.Entry<Reference<Class<?>>, ?>> iterator = ((ConcurrentMap) cache).entrySet().iterator();
+                while (iterator.hasNext()) {
+                    if (iterator.next().getKey().get() == clazz) {
+                        iterator.remove();
+                        if (LOGGER.isLoggable(Level.FINER)) {
+                            LOGGER.log(Level.FINER, "cleaning up {0} from ObjectStreamClass.Caches.{1}", new Object[]{clazz.getName(), cacheFName});
+                        }
+                        break;
                     }
-                    break;
                 }
             }
         }
@@ -334,7 +399,7 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
         ClassLoader memoryProtectedLoader = null;
         List<ClasspathEntry> cp = getClasspath();
         if (!cp.isEmpty()) {
-            List<URL> urlList = new ArrayList<URL>(cp.size());
+            List<URL> urlList = new ArrayList<>(cp.size());
             
             for (ClasspathEntry entry : cp) {
                 ScriptApproval.get().using(entry);
@@ -380,7 +445,7 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
         } finally {
             try {
                 if (canDoCleanup) {
-                    cleanUpLoader(memoryProtectedLoader, new HashSet<ClassLoader>(), new HashSet<Class<?>>());
+                    cleanUpLoader(memoryProtectedLoader, new HashSet<>(), new HashSet<>());
                 }
             } catch (Exception x) {
                 LOGGER.log(Level.WARNING, "failed to clean up memory " , x);
@@ -457,13 +522,13 @@ public final class SecureGroovyScript extends AbstractDescribableImpl<SecureGroo
 
         @SuppressFBWarnings(value = "DP_CREATE_CLASSLOADER_INSIDE_DO_PRIVILEGED", justification = "Irrelevant without SecurityManager.")
         @RequirePOST
-        public FormValidation doCheckScript(@QueryParameter String value, @QueryParameter boolean sandbox) {
+        public FormValidation doCheckScript(@QueryParameter String value, @QueryParameter boolean sandbox, @QueryParameter String oldScript) {
             FormValidation validationResult = GroovySandbox.checkScriptForCompilationErrors(value,
-                    new GroovyClassLoader(Jenkins.getInstance().getPluginManager().uberClassLoader));
+                    new GroovyClassLoader(Jenkins.get().getPluginManager().uberClassLoader));
             if (validationResult.kind != FormValidation.Kind.OK) {
                 return validationResult;
             }
-            return sandbox ? FormValidation.ok() : ScriptApproval.get().checking(value, GroovyLanguage.get());
+            return sandbox ? FormValidation.ok() : ScriptApproval.get().checking(value, GroovyLanguage.get(), !StringUtils.equals(oldScript, value));
         }
 
     }
